[package]
name = "demo-axum-h3"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quinn = "0.10"
h3 = "0.0.4"
h3-quinn = "0.0.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
rcgen = "0.11"
bytes = "1.0"
http = "1.0"
futures-util = "0.3"
